# HHVacanciesParser

./: .env  .env.test  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/jobs/: exceptions.py  router.py  schemas.py
app/celery_app/: celery_app.py  celery_config.py  worker_context.py
app/celery_app/tasks/: __init__.py  parsing_tasks.py
app/core/: __init__.py  config.py  env.py  logging_settings.py  settings.py  toml.py
app/custom_types/: __init__.py  country_regions.py  error_codes.py  job_search_status.py
app/exceptions/: __init__.py  hh_exceptions.py
app/models/: __init__.py  hh_auth.py  job_search.py
app/parser/: __init__.py  apply.py  auth.py  checks.py  search.py
app/services/: __init__.py  browser.py  parser.py
app/types/: __init__.py  country_regions.py  job_search_status.py
app/utils/: __init__.py  click_utils.py
frontend/: index.html  script.js  styles.css
